--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-fastapi
-uvicorn
-easyocr
-opencv-python
-numpy
-python-multipart
+fastapi==0.104.1
+uvicorn==0.24.0
+opencv-python-headless==4.8.1.78
+easyocr==1.7.1
+pillow==10.1.0
+python-multipart==0.0.6
+numpy==1.24.3
